compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__assignments__correct_variable_renaming_in_assigned_functions.snap
---
source: compiler-core/src/javascript/tests/assignments.rs
expression: "\npub fn debug(x) {\n  let x = x\n  fn(x) { x + 1 }\n}\n"
---
----- SOURCE CODE

pub fn debug(x) {
  let x = x
  fn(x) { x + 1 }
}


----- COMPILED JAVASCRIPT
export function debug(x) {
  let x$1 = x;
  return (x) => { return x + 1n; };
}
