compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__assignments__escaped_variables_in_constants.snap
---
source: compiler-core/src/javascript/tests/assignments.rs
expression: "\npub const class = 5\npub const something = class\n"
---
----- SOURCE CODE

pub const class = 5
pub const something = class


----- COMPILED JAVASCRIPT
export const class$ = 5n;

export const something = class$;
