compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__assignments__returning_literal_subject.snap
---
source: compiler-core/src/javascript/tests/assignments.rs
expression: "fn go(x) { let assert 1 = x + 1 }"
---
----- SOURCE CODE
fn go(x) { let assert 1 = x + 1 }

----- COMPILED JAVASCRIPT
import { makeError } from "../gleam.mjs";

function go(x) {
  let $ = x + 1n;
  if ($ !== 1n) {
    throw makeError(
      "let_assert",
      "my/mod",
      1,
      "go",
      "Pattern match failed, no pattern matched the value.",
      { value: $ }
    )
  }
  return $;
}
